--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ body::before {
     height: 100%;
     bottom: 0;
     left: 50%;
-    background-color: #afafb3;
+    background-color: #b8b8ed;
 }
 
 .header {
