--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ body::before {
     font-family: NunitoBold, sans-serif;
     font-size: 20px;
     line-height: 27px;
-    color: #c57272;
+    color: #323232;
 }
 
 .input:focus {
