--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ body::before {
     max-width: 496px;
     font-size: 22px;
     line-height: 27px;
-    color: #636363;
+    color: #bf8282;
     margin-bottom: 69px;
 }
 
