--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ body::before {
 .input-title {
     font-size: 16px;
     line-height: 27px;
-    color: #9c9c8c;
+    color: #efefe1;
 }
 
 .main-form {
