--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ body::before {
 
 .input {
     border: none;
-    border-bottom: 1px solid #C6C6C4;
+    border-bottom: 1px solid #7a7a69;
     width: 100%;
     font-family: NunitoBold, sans-serif;
     font-size: 20px;
